docs: update docs for /api/transactions routes
